argocd/apps/kube-prometheus/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    app.kubernetes.io/name: monitoring
    app.kubernetes.io/component: demo
    gateway.networking.k8s.io/allowed: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
