argocd/apps/kube-prometheus/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: podinfo-to-shared-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/name: kube-prometheus
    apps.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: monitoring
  to:
    - group: "gateway.networking.k8s.io"
      kind: Gateway
      name: shared-gateway
