argocd/apps/kube-prometheus/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kube-prometheus
  namespace: monitoring
  annotations: {}
spec:
  gatewayClassName: cilium
  listeners:
    - hostname: grafana.civilsnut.se
      name: grafana-civilsnut-se-http
      port: 80
      protocol: HTTP
    - hostname: grafana.civilsnut.se
      name: grafana-civilsnut-se-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: civilsnut-se-wildcard-tls
            namespace: ingress-nginx
      allowedRoutes:
        namespaces:
          from: All
