argocd/apps/kube-prometheus/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus
  namespace: monitoring
spec:
  hostnames:
    - grafana.civilsnut.se
  parentRefs:
    - name: shared-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
